# CirrusBench

./: .env.template  .gitignore  README.md  pyproject.toml  requirements.txt
configs/: judge_config.yaml  providers_config.yaml
docs/: LLM_AND_JUDGE_GUIDE.md  LLM_AND_JUDGE_GUIDE_zh.md  README_zh.md
scripts/: run.sh
src/cirrus/: run.py
src/cirrus/agent/: base.py  llm_agent.py
src/cirrus/configs/: config.py  paths.py  run_configs.py
src/cirrus/data_model/: message.py  simulation.py  tasks.py
src/cirrus/environment/: db.py  environment.py  toolkit.py
src/cirrus/judge/: scoring.py
src/cirrus/llm/: __init__.py  generate.py  llm_config.py  registry.py  schemas.py  service.py  utils.py
src/cirrus/llm/providers/: base.py
src/cirrus/metrics/: agent_metrics.py  analyze_results.py  analyze_results_common.py  analyze_results_cross.py  analyze_results_tool.py  tokens.py
src/cirrus/orchestrator/: orchestrator.py
src/cirrus/utils/: __init__.py  action_transform_json_xml.py  basic.py  basic_utils.py  display.py  io_utils.py  utils.py  xml_parser.py
tests/: test_judge.py  test_providers_integration.py
