[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cirrus"
version = "0.1.0"
dependencies = [
    "openai>=1.30.0",
    "anthropic>=0.34.0",
    "google-genai>=0.3.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
